Update the game's rule
更新干瞪眼游戏规则

--- a/干瞪眼游戏规则.md
+++ b/干瞪眼游戏规则.md
@@ -25,13 +25,13 @@
 
 ### 3.   牌型的比较
 
-点数从大到小：2、A、K、Q、J、10、9、8、7、6、5、4、3  
++ 点数从大到小：2、A、K、Q、J、10、9、8、7、6、5、4、3    
 
-单张、顺子、对子、连对的牌型，必须点数正好大过一点才可以出。2可以大过所有单张，22可以大过所有对子。  
++ 单张、顺子、对子、连对的牌型，必须点数正好大过一点才可以出。2可以大过所有单张，22可以大过所有对子。    
 
-三张和炸弹只要点数大的就可以出。  
++ 三张和炸弹只要点数大的就可以出。  
 
-炸弹的牌型大过所有其他牌型，双王炸弹最大。 
++ 炸弹的牌型大过所有其他牌型，双王炸弹最大。 
 
  
 
