Update game rules
更新游戏规则

--- a/干瞪眼游戏规则.md
+++ b/干瞪眼游戏规则.md
@@ -46,7 +46,7 @@
 
 
 + 出牌和拿牌
-  + 拥有出牌权的玩家可以出任意符合规则的牌型，其他玩家顺序出牌，必须出符合规则的比上家大的牌型或者不出。当所有人都选择不出，一轮出牌结束。这时判断是否有底牌，如果有，则最后一个出牌的人拿一张牌。  
+  + 拥有出牌权的玩家可以出任意符合规则的牌型，其他玩家顺序按规则出牌或者不出，选择不出的需要摸一张牌（若牌堆摸完了，则不出的不需要摸牌，直接轮到下一个玩家即可）。当所有人都选择不出（包括最后一个出牌的人自己），一轮出牌结束，最后一个出牌的出任意符合规则的牌型。  
 
 
 
