Temporarily change the rules of the game
暂时更改游戏规则

--- a/干瞪眼游戏规则.md
+++ b/干瞪眼游戏规则.md
@@ -39,7 +39,7 @@
 
 + 决定庄家和发牌
 
-  + 每新局开始，随机决定一个玩家成为庄家，之后的局，上局的赢家成为庄家。庄家拥有当局第一轮出牌权。  
+  + 每新局开始，随机决定一个玩家成为庄家，~~之后的局，上局的赢家成为庄家~~ **每局都随机庄家** 。庄家拥有当局第一轮出牌权。  
 
   + 游戏开始后，庄家发六张牌，其余人发五张牌，剩下的牌作为底牌。  
 
