--- a/干瞪眼游戏规则.md
+++ b/干瞪眼游戏规则.md
@@ -45,7 +45,7 @@
 
 
 
-+ 出牌和拿牌
++ 出牌和摸牌
   + 拥有出牌权的玩家可以出任意符合规则的牌型，其他玩家顺序按规则出牌或者不出，选择不出的需要摸一张牌（若牌堆摸完了，则不出的不需要摸牌，直接轮到下一个玩家即可）。当所有人都选择不出（包括最后一个出牌的人自己），一轮出牌结束，最后一个出牌的出任意符合规则的牌型。  
 
 
